--- a/templates/courses-2/archive-courses.html
+++ b/templates/courses-2/archive-courses.html
@@ -108,17 +108,10 @@ Institute Dashboard
             <div class="table-responsive">
               <table class="table table-bordered table-hover table-striped mb-4">
                   <tr>
-<<<<<<< HEAD
                     <th style="color: #000000;" class="">#</th>
                     <th style="color: #000000;" class="">Class</th>
                     <th style="color: #000000;" class="">Course</th>
                     <th style="color: #000000;" class="text-center">Actions</th>
-=======
-                    <th class="">Sr No</th>
-                    <th class="">Class</th>
-                    <th class="">Course</th>
-                    <th class="text-center">Actions</th>
->>>>>>> a56d3e25cef24313bbcb558987098276ae8347b5
                   </tr>
 
                   {% for i in course %}
@@ -127,7 +120,10 @@ Institute Dashboard
                     <td>{{i.forclass}}</td>
                     <td>{{i.courseName}}</td>
                     <td class="text-center">
-                      
+                      <a class="btn btn-warning" href="{% url 'editCourse' i.id %}"><i class="flaticon-pencil-line"
+                        style="font-size:medium;"></i></a>
+                      <a class="btn btn-danger" href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
+                        style="font-size:medium;"></i></a>
                       <a class="btn btn-success" href="{% url 'course-unarchive' i.id %}"><i class="flaticon-delete-fill"
                           style="font-size:medium;"></i></a>
                     </td>
